Rapidly deleting games from the list no longer breaks the total hours counter

--- a/style.css
+++ b/style.css
@@ -299,6 +299,10 @@ span {
   width: fit-content;
 }
 
+span.span--total {
+  cursor: unset;
+}
+
 div.modal--game > img {
   display: block;
   margin: auto;
